1999-11-13  olicha   <olivier.chapuis@free.fr>

	* mod_m2f_communication.html: Updated the "Synchronous vs. 
	Asynchronous Operation" section.

	* mod_f2m_communication.html: Replaced M_LOCKONSEND by M_NOTUSED
 	
1999-09-26  Dominik Vogt  <dominik_vogt@gmx.de>

	* mod_initialization.html: more colorset instructions

1999-10-19  Dominik Vogt  <dominik.vogt@gmx.de>

	* index.html: added news for 2.2.3

	* download.html: increased stable version number to 2.2.3

1999-10-14  Dan Espen  <dane@mk.telcordia.com>

	* screenshots: Added some screenshots from Lee Willis.

1999-10-08  Dominik Vogt  <dominik.vogt@gmx.de>

	* download.html: increased version number to 2.3.8

1999-09-19  Dominik Vogt  <dominik_vogt@gmx.de>

	* fvwm-cats/index.html: 'Cats' doesn't blink anymore

	* download.html: increased version number to 2.3.8

Sun Sep 12 09:36:37 1999  DanEspen  <dje@blue>

	* icons.html: New page for downloading and viewing the fvwm icons.

	* fvwm-web/generated: added "icon_download" to hold the tgz file
	for downloading the icons.  Added "icon_shots" to hold the gif
	files to picture the icons.

	* developers.html: New file for Fvwm history, (some dates would be
	nice) and links to developer information.

	* index.html: Try to get scrollbars of the main page.
	New page for developer history and links to developer information.
	Go to 3 column link display for Netscape users (maybe a table later).
	Add more links to eliminate the "Docs, FAQ, Other" category.
	"docs.html" is now obsolete.
	Put links in most important first order.

1999-09-10  Hippo

	* modules.html,mod_initialization.html: added section on how to code
	colorsets

1999-09-08  Dan Espen  <dane@mk.telcordia.com>

	* Moved fvwm-cats into fvwm-web.  Moved the cats changelog here too.

1999-04-15  Bob Woodside  <proteus@pcnet.com>
	* index.html: made the pets' names bold, minor update to my entry.

1999-04-15  Dominik Vogt  <dominik_vogt@hp.com>

	* fvwm-cats.html: renamed to index.html
