@@ -40,6 +40,7 @@ the X Window system.
   <li><a href="generated/NEWS.html">Latest News</a>
   <li><a href="generated/FAQ.html">FAQ</a>
   <li><a href="screenshots/screenshot.html">Screenshots</a>
+  <li><a href="vector-buttons/vector-buttons.html">Vector Buttons</a>
   <li><a href="generated/manpages/man-pages.html">Manual Pages</a>
   <li><a href="links.html">Links</a>
   <li><a href="icons.html">Icon Download</a>
@@ -54,7 +55,7 @@ the X Window system.
 Created: Jan 31, 1996
 <!-- Created: Thu Jul  1 22:03:12 EDT 1999 -->
 <!-- hhmts start -->
-Last modified: Tue Oct 19 18:38:39 CEST 1999
+Last modified: Mon Nov 22 10:00:09 EST 1999
 <!-- hhmts end -->
 </body>
 </html>
