@@ -2,7 +2,7 @@
 <head>
 <title>FVWM Screenshots</title>
 </head>
-  <body BACKGROUND="black-stone1.jpg"
+  <body BACKGROUND="../black-stone1.jpg"
     bgcolor="#000000" text="#ffffff"
     link="#FFFF88" vlink="#EEDDDD" alink="#ff0000">
     <center>
