@@ -1,0 +1,28 @@
+# Fvwm Vector Buttons Collection 1.
+# All possible 10 buttons are used.
+# Buttons left to right are numbered 1 3 5 7 9 0 8 6 4 2
+DestroyDecor    DecorDemo
+AddToDecor      DecorDemo
++ TitleStyle Height 30
++ TitleStyle (Solid gray -- Flat)
++ ButtonStyle Reset
+# Large box
++ ButtonStyle 1  5 25x25@1 25x75@1 75x75@0 75x25@0 25x25@1
+# the number "2"
++ ButtonStyle 3 12 80x80@0 22x80@0 80x40@0 70x25@0 30x25@0 20x35@0 20x30@1 30x20@1 70x20@1 80x30@1 20x75@1 80x75@1
+# little box
++ ButtonStyle 5 5 40x40@1 60x40@1 60x60@0 40x60@0 40x40@1
+# tall box
++ ButtonStyle 7 5 40x25@1 60x25@1 60x75@0 40x75@0 40x25@1
+# dot
++ ButtonStyle 9 5 45x45@1 55x45@1 55x55@0 45x55@0 45x45@1
+# small up triangle
++ ButtonStyle 0  4 50x35@1 65x65@0 35x65@0 50x35@1
+# Expanding Windows (iconify -- looks NICE)
++ ButtonStyle 8 16 60x40@1 60x80@0 15x80@0 15x40@1 60x40@1 40x40@1 40x25@1 75x25@1 75x60@0 60x60@0 75x60@0 75x40@0 85x40@0 85x15@0 60x15@1 60x25@1
+# large down triangle
++ ButtonStyle 6  4 50x75@1 25x25@1 75x25@1 50x75@0
+# large up triangle
++ ButtonStyle 4  4 50x25@1 75x75@0 25x75@0 50x25@1
+# small down triangle
++ ButtonStyle 2  4 50x65@1 35x35@1 65x35@1 50x65@0
