@@ -1,0 +1,27 @@
+# Fvwm Vector Buttons Collection 2.
+# All possible 10 buttons are used.
+# Buttons left to right are numbered 1 3 5 7 9 0 8 6 4 2
+DestroyDecor DecorDemo
+AddToDecor   DecorDemo
++ TitleStyle Height 30
++ TitleStyle (Solid gray -- Flat)
+# Down Arrow
++ ButtonStyle 1 8 40x20@1 40x50@1 20x50@1 50x80@1 80x50@0 60x50@0 60x20@0 40x20@1
+# Left arrow  ( <- )
++ ButtonStyle 3 8 80x40@1 50x40@1 50x20@1 20x50@1 50x80@0 50x60@0 80x60@0 80x40@0
+# Right arrow ( -> )
++ ButtonStyle 5 8 20x40@1 50x40@1 50x20@1 80x50@1 50x80@0 50x60@0 20x60@0 20x40@1
+# Horizontal Line with arrowheads on left and right ( <-> )
++ ButtonStyle 7 12 10x50@1 35x25@1 35x40@1 65x40@1 65x25@1 90x50@1 65x75@0 65x60@0 35x60@0 35x75@0 10x50@0 10x50@1
+# Vertical Line with arrowheads on top and bottom
++ ButtonStyle 9 12 50x10@1 25x35@1 40x35@1 40x60@1 25x60@1 50x85@1 75x60@0 60x60@0 60x35@0 75x35@0 50x10@0 50x10@1
+# Diagonal Line with arrowheads on top and bottom ( / )
++ ButtonStyle 0 11 80x15@1 45x15@1 55x25@1 25x55@1 15x45@1 15x80@1 50x80@0 40x70@0 70x40@0 80x50@0 80x15@0
+#big box crossed by an arrow to a little box, good for iconify
++ ButtonStyle 8 14 20x20@1 20x70@1 70x70@0 70x20@0 20x20@1 60x60@0 60x50@0 60x60@0 50x60@0 60x60@0 60x80@0 80x80@0 80x60@0 60x60@0
+# an up arrow:
++ ButtonStyle 6 8 40x80@1 40x50@1 20x50@1 50x20@1 80x50@0 60x50@0 60x80@0 40x80@0
+# 4 Horizontal bars (sticky)
++ ButtonStyle 4 12 10x23@0 90x23@0 90x28@0 10x28@1 10x47@1 90x47@0 90x52@0 10x52@1 10x70@2 90x70@0 90x76@0 10x76@1
+# Diagonal Line with arrowheads on top and bottom ( \ )
++ ButtonStyle 2 12 55x15@0 45x25@0 75x55@0 85x45@0 85x80@0 50x80@0 60x70@1 30x40@1 20x50@1 20x15@1 55x15@1 55x15@0
