@@ -1,0 +1,27 @@
+# Fvwm Vector Buttons Collection 3.
+# All possible 10 buttons are used.
+# Buttons left to right are numbered 1 3 5 7 9 0 8 6 4 2
+DestroyDecor DecorDemo
+AddToDecor   DecorDemo
++ TitleStyle Height 30
++ TitleStyle (Solid gray -- Flat)
+# Standard X
++ ButtonStyle 1 17 20x20@1 30x20@1 50x40@1 70x20@1 80x20@1 80x30@0 60x50@0 80x70@1 80x80@0 70x80@0 50x60@0 30x80@0 20x80@0 20x70@0 40x50@1 20x30@0 20x20@1
+# Funky X
++ ButtonStyle 3 13 26x29@1 34x21@1 50x35@1 70x21@1 79x29@1 63x48@0 79x65@1 70x75@0 50x61@0 34x75@0 26x65@0 44x48@1 26x29@0
+# Stylized X
++ ButtonStyle 5 16 20x20@1 30x20@1 50x40@1 70x20@1 80x20@1 80x30@0 60x50@0 80x80@0 70x80@0 50x60@0 30x80@0 20x80@0 20x70@0 40x50@1 20x30@0 20x20@1
+# Small Lightning Bolt (skinny at both ends)
++ ButtonStyle 7 7 70x15@0 30x55@1 50x55@0 40x85@1 80x45@0 60x45@1 70x15@0
+# Big Lighting Bolt (Fat at top, comes to a point)
++ ButtonStyle 9 8 35x15@1 20x50@1 40x50@0 30x80@1 75x40@0 50x40@1 75x15@0 35x15@1
+# Nested Right Angles (looks nice)
++ ButtonStyle 0 14 0x0@1 0x20@1 20x20@0 20x0@0 0x0@1 0x25@1 25x25@1 25x0@1 55x0@1 55x55@0 0x55@0 0x60@1 60x60@1 60x0@1
+# Nested Right Angles (looks kinda crappy)
++ ButtonStyle 8 13 10x0@1 80x0@1 80x10@1 80x80@0 0x80@0 0x60@1 10x65@1 70x65@0 70x0@0 55x0@1 55x10@1 55x55@0 10x55@0
+# Nothing (replace this)
++ ButtonStyle 6 2 0x0@0 0x100@0
+# Nothing (replace this)
++ ButtonStyle 4 2 0x0@0 0x100@0
+# Nothing (replace this)
++ ButtonStyle 2 2 0x0@0 0x100@0
