@@ -1,0 +1,33 @@
+<html>
+<head>
+<title>FVWM Vector Buttons</title>
+</head>
+  <body BACKGROUND="../black-stone1.jpg"
+    bgcolor="#000000" text="#ffffff"
+    link="#FFFF88" vlink="#EEDDDD" alink="#ff0000">
+    <center>
+      <h1><font color="pink">FVWM Vector Buttons</font></h1></center>
+      <p>
+	Fvwm gives you lots of ways to decorate the buttons in the title
+	bar.  Vector buttons are images drawn using the buttons shadow and
+	highlight colors.  This page shows some of the vector buttons
+	that have been contributed to fvwm.
+      <p>
+	Click on the image to view the file that drew that titlebar or
+      shift click to download the file.
+    <table>
+      <tr><td>
+	  <a href="DecorDemo1.fvwmrc"><img src="DecorDemo1.gif"
+	      alt="Collection 1" align=left></a>
+	</td></tr>
+      <tr><td>
+	  <a href="DecorDemo2.fvwmrc"><img src="DecorDemo2.gif"
+	      alt="Collection 2" align=left></a></td></tr>
+      <tr><td>
+	  <a href="DecorDemo3.fvwmrc"><img src="DecorDemo3.gif"
+	      alt="Collection 3" align=left></a></td></tr>
+    </table>
+    <hr>
+    Created: November 22, 1999 ----- Last Updated: November 22, 1999.
+  </body>
+</html>
